--- a/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
@@ -641,7 +641,7 @@
         <!--Welcome View Controller - Introduction-->
         <scene sceneID="ZlF-1f-LLw">
             <objects>
-                <pageViewController storyboardIdentifier="WelcomeView" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="TK4-IA-xNp" customClass="INUWelcomeViewController" sceneMemberID="viewController">
+                <pageViewController storyboardIdentifier="WelcomeView" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" pageSpacing="2" navigationOrientation="horizontal" spineLocation="none" id="TK4-IA-xNp" customClass="INUWelcomeViewController" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Introduction" id="N5T-3E-gCy"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
@@ -664,32 +664,35 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="4mb-bu-fG6">
-                                <rect key="frame" x="32" y="76" width="639" height="642"/>
+                                <rect key="frame" x="32" y="81" width="639" height="637"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="663" translatesAutoresizingMaskIntoConstraints="NO" id="wzP-cv-GGX" customClass="INULabel">
-                                <rect key="frame" x="20" y="36" width="663" height="24"/>
+                                <rect key="frame" x="20" y="36" width="663" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k9C-Vy-s4P">
-                                <rect key="frame" x="324" y="726" width="55" height="34"/>
+                                <rect key="frame" x="319" y="726" width="65" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="34" id="yY2-gm-4rq"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <state key="normal" title="Button">
-                                    <color key="titleColor" red="0.05685453117" green="0.4832131267" blue="0.99661016459999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <state key="highlighted">
-                                    <color key="titleColor" red="0.37723109129999999" green="0.70589846369999998" blue="0.9988128543" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="onTapSkip:" destination="WGy-FC-CA3" eventType="touchUpInside" id="bgd-AW-y7X"/>
                                 </connections>
                             </button>
                         </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wzP-cv-GGX" firstAttribute="top" secondItem="rmX-UF-cE1" secondAttribute="bottom" constant="16" id="0cE-g7-4JM"/>
                             <constraint firstItem="wzP-cv-GGX" firstAttribute="leading" secondItem="e6R-XI-IGx" secondAttribute="leading" constant="20" id="4eh-ca-Rak"/>
