--- a/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main-iPad.storyboard
@@ -545,32 +545,31 @@
                             <rect key="frame" x="0.0" y="64" width="320" height="120"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gromf_telling" translatesAutoresizingMaskIntoConstraints="NO" id="a5g-KV-84i">
-                                    <rect key="frame" x="6" y="20" width="100" height="100"/>
+                                <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gromf_telling" translatesAutoresizingMaskIntoConstraints="NO" id="a5g-KV-84i">
+                                    <rect key="frame" x="0.0" y="20" width="320" height="100"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="100" id="FDD-bd-tNt"/>
-                                        <constraint firstAttribute="width" constant="100" id="ZYe-Jl-IX3"/>
+                                        <constraint firstAttribute="width" constant="320" id="CFr-eL-OxD"/>
+                                        <constraint firstAttribute="height" constant="100" id="lOa-QE-OD5"/>
                                     </constraints>
                                 </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="gSW-DP-vd6">
-                                    <rect key="frame" x="122" y="20" width="190" height="98"/>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="178" translatesAutoresizingMaskIntoConstraints="NO" id="gSW-DP-vd6">
+                                    <rect key="frame" x="122" y="32" width="178" height="79"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    <string key="text">Label
+Label
+Label
+Label</string>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <size key="shadowOffset" width="0.0" height="1"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="trailing" secondItem="gSW-DP-vd6" secondAttribute="trailing" constant="8" id="0de-iE-Grr"/>
-                                <constraint firstItem="gSW-DP-vd6" firstAttribute="leading" secondItem="dBR-rR-wtX" secondAttribute="leading" constant="122" id="7rE-uY-aSV"/>
-                                <constraint firstItem="a5g-KV-84i" firstAttribute="top" secondItem="dBR-rR-wtX" secondAttribute="top" constant="20" id="J9H-J8-2eb"/>
-                                <constraint firstItem="gSW-DP-vd6" firstAttribute="top" secondItem="dBR-rR-wtX" secondAttribute="top" constant="20" id="r6E-oG-N9C"/>
-                                <constraint firstItem="a5g-KV-84i" firstAttribute="leading" secondItem="dBR-rR-wtX" secondAttribute="leading" constant="6" id="sbV-cm-PTE"/>
-                                <constraint firstAttribute="bottom" secondItem="gSW-DP-vd6" secondAttribute="bottom" constant="2" id="tFE-1a-h75"/>
+                                <constraint firstItem="a5g-KV-84i" firstAttribute="top" secondItem="dBR-rR-wtX" secondAttribute="top" constant="20" id="K90-or-FDA"/>
+                                <constraint firstItem="a5g-KV-84i" firstAttribute="leading" secondItem="dBR-rR-wtX" secondAttribute="leading" id="OMV-Wf-PKO"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -943,7 +942,7 @@ Inutilis Software</string>
         <image name="assisting_yes" width="20" height="20"/>
         <image name="calendar" width="32" height="32"/>
         <image name="comments" width="23" height="22"/>
-        <image name="gromf_telling" width="100" height="100"/>
+        <image name="gromf_telling" width="320" height="100"/>
         <image name="guests" width="31" height="22"/>
         <image name="index_header.jpg" width="1024" height="384"/>
         <image name="info" width="22" height="22"/>
