--- a/Inutivent-iOS/Base.lproj/Main.storyboard
+++ b/Inutivent-iOS/Base.lproj/Main.storyboard
@@ -18,26 +18,19 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="gromf_telling" translatesAutoresizingMaskIntoConstraints="NO" id="b4j-2V-oSL">
-                                    <rect key="frame" x="6" y="20" width="100" height="100"/>
+                                    <rect key="frame" x="0.0" y="20" width="320" height="100"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 </imageView>
-                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="190" translatesAutoresizingMaskIntoConstraints="NO" id="NKR-4E-epP">
-                                    <rect key="frame" x="122" y="20" width="190" height="98"/>
+                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label Label Label Label" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="173" translatesAutoresizingMaskIntoConstraints="NO" id="NKR-4E-epP">
+                                    <rect key="frame" x="125" y="31" width="173" height="80"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                     <nil key="highlightedColor"/>
-                                    <color key="shadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <size key="shadowOffset" width="0.0" height="1"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="NKR-4E-epP" firstAttribute="top" secondItem="Hax-rU-H7F" secondAttribute="top" constant="20" id="L43-q4-OZN"/>
-                                <constraint firstAttribute="trailing" secondItem="NKR-4E-epP" secondAttribute="trailing" constant="8" id="PxT-Pm-oig"/>
-                                <constraint firstAttribute="bottom" secondItem="NKR-4E-epP" secondAttribute="bottom" constant="2" id="jqt-o8-UfW"/>
-                                <constraint firstItem="NKR-4E-epP" firstAttribute="leading" secondItem="Hax-rU-H7F" secondAttribute="leading" constant="122" id="lPZ-D3-BZG"/>
-                            </constraints>
                         </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="gray" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ListPrototypeCell" textLabel="pf0-u9-vTf" detailTextLabel="OnA-jo-hLT" style="IBUITableViewCellStyleSubtitle" id="1MH-aC-3vc">
@@ -901,7 +894,7 @@ Inutilis Software</string>
         <image name="assisting_yes" width="20" height="20"/>
         <image name="calendar" width="32" height="32"/>
         <image name="comments" width="23" height="22"/>
-        <image name="gromf_telling" width="100" height="100"/>
+        <image name="gromf_telling" width="320" height="100"/>
         <image name="guests" width="31" height="22"/>
         <image name="index_header.jpg" width="1024" height="384"/>
         <image name="info" width="22" height="22"/>
